lang/lc/tests/issue46.sys
system Foo(bool h1) 
{ 
} 
 
system Bar() 
{ 
	system Foo inst(); 
}
